# lumen-navi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-macos.yml
apps/desktop/: index.html  package-lock.json  package.json  popup.html  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  Onboarding.tsx  api.ts  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: Lumen.icns  henry.w@example.net  icon.icns
apps/desktop/src-tauri/src/: asr_models.rs  assistant.rs  commands.rs  lib.rs  main.rs  selection_popup.rs  shell.rs  state.rs  tray.rs
apps/desktop/src/design/: index.ts  styles.css
apps/desktop/src/design/components/core/: Button.d.ts  Button.jsx  Button.prompt.md  Icon.d.ts  Icon.jsx  Icon.prompt.md  IconButton.d.ts  IconButton.jsx  IconButton.prompt.md  buttons.card.html
apps/desktop/src/design/components/data-display/: Card.d.ts  Card.jsx  Card.prompt.md  EmptyState.d.ts  EmptyState.jsx  EmptyState.prompt.md  Pill.d.ts  Pill.jsx  Pill.prompt.md  StatCard.d.ts  StatCard.jsx  StatCard.prompt.md  data-display.card.html
apps/desktop/src/design/components/feedback/: Notice.d.ts  Notice.jsx  Notice.prompt.md  ProgressBar.d.ts  ProgressBar.jsx  ProgressBar.prompt.md  Spinner.d.ts  Spinner.jsx  Spinner.prompt.md  StatusDot.d.ts  StatusDot.jsx  StatusDot.prompt.md  feedback.card.html
apps/desktop/src/design/components/forms/: Input.d.ts  Input.jsx  Input.prompt.md  Select.d.ts  Select.jsx  Select.prompt.md  Textarea.d.ts  Textarea.jsx  Textarea.prompt.md  forms.card.html
apps/desktop/src/design/components/navigation/: NavItem.d.ts  NavItem.jsx  NavItem.prompt.md  Tabs.d.ts  Tabs.jsx  Tabs.prompt.md  ThemeToggle.d.ts  ThemeToggle.jsx  ThemeToggle.prompt.md  navigation.card.html
apps/desktop/src/design/tokens/: base.css  colors.css  fonts.css  spacing.css  typography.css
apps/desktop/src/popup/: PopupApp.tsx  main.tsx  popup.css
crates/lumen-api/: Cargo.toml
crates/lumen-api/src/: lib.rs
crates/lumen-asr-engine/: Cargo.toml
crates/lumen-asr-engine/src/: download.rs  install_lock.rs  lib.rs  openai_http.rs  paths.rs  sensevoice.rs  wav.rs  whisper.rs
crates/lumen-config/: Cargo.toml
crates/lumen-config/src/: lib.rs
crates/lumen-context/: Cargo.toml  build.rs
crates/lumen-context/src/: browser.rs  browser_host.rs  browser_native.rs  fusion.rs  helper.rs  lib.rs  operational.rs  readiness.rs  session.rs  types.rs  vault.rs
crates/lumen-context/src/macos/: ax.rs  ax_bridge.m  capture.rs  frontmost.rs  keychain_bridge.m  lock.rs  mod.rs  screen_bridge.m  screen_source.rs  vision.rs  vision_bridge.m  vision_source.rs
crates/lumen-context/tests/: browser_provider.rs  contracts.rs  helper.rs  macos_ax.rs  macos_screen.rs
crates/lumen-context/tests/fixtures/: browser_context_v1.json  context_snapshot_v1.json
crates/lumen-daemon/: Cargo.toml
crates/lumen-daemon/src/: control_server.rs  main.rs
crates/lumen-intake/: Cargo.toml
crates/lumen-intake/src/: lib.rs
crates/lumen-platform/: Cargo.toml
crates/lumen-platform-macos/: Cargo.toml  build.rs
crates/lumen-platform-macos/src/: asr.rs  asr_bridge.m  capture.rs  clipboard.rs  frontmost.rs  lib.rs  lock.rs  mic.rs  ocr.rs  ocr_bridge.m  permissions.rs  selection.rs
crates/lumen-platform/src/: lib.rs
crates/lumen-process/: Cargo.toml
crates/lumen-process/src/: lib.rs  ocr_worker.rs  transcribe_worker.rs
crates/lumen-sources-media/: Cargo.toml
crates/lumen-sources-media/src/: audio.rs  lib.rs  orchestrator.rs  session.rs
crates/lumen-store/: Cargo.toml
crates/lumen-store/src/: blob.rs  lib.rs  schema.rs  sqlite.rs
crates/lumen-types/: Cargo.toml
crates/lumen-types/src/: lib.rs
docs/: ARCHITECTURE.md  AUDIO_PRODUCT.md  DESKTOP.md  MACOS_LOCAL_SIGNING.md  MACOS_RELEASE_NOTES.md  OBSERVE_CAPTURE.md  OCR_PRODUCT.md  OCR_VISION_RESEARCH.md  PLAN.md  SHARED_MODELS_CONTRACT.md  SOAK.md  VISION.md
extensions/context-browser/: README.md  manifest.asr.chromium.json  manifest.navi.chromium.json  manifest.safari.json  package-lock.json  package.json
extensions/context-browser/safari/: AppDelegate.swift.template  SafariWebExtensionHandler.swift.template
extensions/context-browser/scripts/: build-safari-macos.mjs  e2e-chromium.mjs  native-host-manifest.mjs  package.mjs
extensions/context-browser/src/: bridge.js  extractor.js  popup.html  popup.js  service-worker-asr.js  service-worker-navi.js  service-worker-safari.js
extensions/context-browser/test/: bridge.test.js  extractor.test.js  manifests.test.js
scripts/macos/: collect-release-asset.sh  ensure-daemon-binary-placeholder.sh  ensure-local-identity.sh  entitlements.dev.plist  prepare-daemon-binary.sh  resolve-identity.sh  sign-app.sh
scripts/release/: set-tauri-version.mjs
