[workspace]
resolver = "2"
members = [
  "crates/lumen-types",
  "crates/lumen-intake",
  "crates/lumen-store",
  "crates/lumen-process",
  "crates/lumen-daemon",
]
default-members = [
  "crates/lumen-types",
  "crates/lumen-intake",
  "crates/lumen-store",
  "crates/lumen-process",
  "crates/lumen-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Chris"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

lumen-types = { path = "crates/lumen-types" }
lumen-intake = { path = "crates/lumen-intake" }
lumen-store = { path = "crates/lumen-store" }
lumen-process = { path = "crates/lumen-process" }
