[workspace]
resolver = "2"
members = [
  "crates/lumen-types",
  "crates/lumen-config",
  "crates/lumen-platform",
  "crates/lumen-platform-macos",
  "crates/lumen-asr-engine",
  "crates/lumen-intake",
  "crates/lumen-sources-media",
  "crates/lumen-store",
  "crates/lumen-process",
  "crates/lumen-api",
  "crates/lumen-daemon",
  "apps/desktop/src-tauri",
]
default-members = [
  "crates/lumen-types",
  "crates/lumen-config",
  "crates/lumen-platform",
  "crates/lumen-platform-macos",
  "crates/lumen-asr-engine",
  "crates/lumen-intake",
  "crates/lumen-sources-media",
  "crates/lumen-store",
  "crates/lumen-process",
  "crates/lumen-api",
  "crates/lumen-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
authors = ["Chris"]
repository = "https://github.com/fakechris/lumen-navi"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal", "net"] }
toml = { version = "0.8", features = ["parse", "display"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

lumen-types = { path = "crates/lumen-types" }
lumen-config = { path = "crates/lumen-config" }
lumen-platform = { path = "crates/lumen-platform" }
lumen-platform-macos = { path = "crates/lumen-platform-macos" }
lumen-asr-engine = { path = "crates/lumen-asr-engine" }
lumen-intake = { path = "crates/lumen-intake" }
lumen-sources-media = { path = "crates/lumen-sources-media" }
lumen-store = { path = "crates/lumen-store" }
lumen-process = { path = "crates/lumen-process" }
lumen-api = { path = "crates/lumen-api" }
