[package]
name = "lumen-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Versioned local context capture contracts and orchestration"

[build-dependencies]
cc = "1"

[dependencies]
async-trait = { workspace = true }
base64 = "0.22"
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
chacha20poly1305 = "0.10"
getrandom = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
