[package]
name = "lumen-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Long-running local daemon for Lumen Navi intake"
repository.workspace = true

[[bin]]
name = "lumen-daemon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
lumen-api = { workspace = true }
lumen-asr-engine = { workspace = true }
lumen-config = { workspace = true }
lumen-intake = { workspace = true }
lumen-platform = { workspace = true }
lumen-platform-macos = { workspace = true }
lumen-process = { workspace = true }
lumen-sources-media = { workspace = true }
lumen-store = { workspace = true }
lumen-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

