[package]
name = "lumen-intake"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intake adapters and runtime for multi-source capture"

[dependencies]
async-trait = { workspace = true }
lumen-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
