[package]
name = "lumen-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macOS implementations of lumen-platform ports"

[dependencies]
async-trait = { workspace = true }
cpal = { workspace = true }
lumen-context = { workspace = true }
lumen-platform = { workspace = true }
tracing = { workspace = true }
