[package]
name = "lumen-process"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async enrichment and processing jobs over stored events"

[dependencies]
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
lumen-platform = { workspace = true }
lumen-store = { workspace = true }
lumen-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
