[package]
name = "lumen-sources-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Screen/audio/video intake and Observe capture orchestrator"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
lumen-config = { workspace = true }
lumen-intake = { workspace = true }
lumen-platform = { workspace = true }
lumen-types = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
